added parallel computing with joblib

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,8 @@
 name: 3xm
 channels:
+  - nvidia
+  - pytorch
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -56,6 +59,7 @@ dependencies:
       - dataclasses-json==0.6.7
       - deprecated==1.2.14
       - idna==3.10
+      - joblib==1.4.2
       - marshmallow==3.22.0
       - mypy-extensions==1.0.0
       - numpy==1.26.4
@@ -69,4 +73,4 @@ dependencies:
       - urllib3==2.2.3
       - wrapt==1.16.0
       - zstandard==0.23.0
-prefix: /home/tobia/anaconda3/envs/3xm
+prefix: /home/local-admin/.conda/envs/3xm
