--- a/env.yml
+++ b/env.yml
@@ -64,6 +64,7 @@ dependencies:
       - mypy-extensions==1.0.0
       - numpy==1.26.4
       - obj2gltf==0.1.2
+      - opencv-python==4.10.0.84
       - packaging==24.1
       - pygltflib==1.16.2
       - requests==2.32.3
