--- a/env.yml
+++ b/env.yml
@@ -1,77 +1,202 @@
 name: 3xm
 channels:
-  - nvidia
-  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - aom=3.6.0=h6a678d5_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - blas=1.0=mkl
+  - blosc=1.21.3=h6a678d5_0
+  - brotli=1.0.9=h5eee18b_8
+  - brotli-bin=1.0.9=h5eee18b_8
   - brotli-python=1.0.9=py311h6a678d5_8
+  - brunsli=0.1=h2531618_0
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.7.2=h06a4308_0
+  - c-ares=1.19.1=h5eee18b_0
+  - ca-certificates=2024.9.24=h06a4308_0
+  - cairo=1.16.0=hb05425b_5
+  - cfitsio=3.470=h5893167_7
+  - charls=2.2.0=h2531618_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - cyrus-sasl=2.1.28=h52b45da_1
+  - cython=3.0.11=py311h5eee18b_0
+  - dav1d=1.2.1=h5eee18b_0
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.8.6=py311hfdbb021_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - eigen=3.4.0=hdb19cb5_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.1.0=pyhd8ed1ab_0
+  - expat=2.6.3=h6a678d5_0
+  - ffmpeg=4.2.2=h20bf706_0
+  - fontconfig=2.14.1=h55d465d_3
   - freetype=2.12.1=h4a9f257_0
+  - giflib=5.2.1=h5eee18b_3
+  - glib=2.78.4=h6a678d5_0
+  - glib-tools=2.78.4=h6a678d5_0
   - gmp=6.2.1=h295c915_3
+  - gnutls=3.6.15=he1e5248_0
+  - graphite2=1.3.14=h295c915_1
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - harfbuzz=4.3.0=hf52aaf7_2
+  - hdf5=1.12.1=h2b7332f_3
+  - icu=73.1=h6a678d5_0
+  - imagecodecs=2023.1.23=py311h8105a5c_0
+  - imageio=2.33.1=py311h06a4308_0
+  - importlib-metadata=8.5.0=pyha770c72_0
   - inflate64=0.3.1=py311h5eee18b_1
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.28.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
   - jpeg=9e=h5eee18b_3
+  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - jxrlib=1.1=h7b6447c_2
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
+  - lazy_loader=0.4=py311h06a4308_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
+  - libabseil=20240116.2=cxx17_h6a678d5_0
+  - libaec=1.0.4=he6710b0_1
+  - libavif=0.11.1=h5eee18b_0
+  - libbrotlicommon=1.0.9=h5eee18b_8
+  - libbrotlidec=1.0.9=h5eee18b_8
+  - libbrotlienc=1.0.9=h5eee18b_8
+  - libclang=14.0.6=default_hc6dbbc7_1
+  - libclang13=14.0.6=default_he11475f_1
+  - libcups=2.4.2=h2d74bed_1
+  - libcurl=8.9.1=h251f7ec_0
   - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
   - libffi=3.4.4=h6a678d5_1
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
+  - libgcc=14.1.0=h77fa898_1
+  - libgcc-ng=14.1.0=h69a702a_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libglib=2.78.4=hdc74915_0
+  - libgomp=14.1.0=h77fa898_1
+  - libiconv=1.16=h5eee18b_3
+  - libidn2=2.3.4=h5eee18b_0
+  - libllvm14=14.0.6=hdb19cb5_3
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.39=h5eee18b_0
+  - libpq=12.17=hdbd6064_0
+  - libprotobuf=4.25.3=he621ea3_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libssh2=1.11.0=h251f7ec_0
+  - libstdcxx=14.1.0=hc0a3c3a_1
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.1=h6a678d5_0
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
+  - libvpx=1.7.0=h439df22_0
   - libwebp-base=1.3.2=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=h097e994_2
+  - libxml2=2.13.1=hfdd30dd_2
+  - libzopfli=1.0.3=he6710b0_0
   - lz4-c=1.9.4=h6a678d5_1
+  - matplotlib-base=3.9.2=py311h6fb44e5_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.10=py311h5eee18b_0
+  - mkl_random=1.2.7=py311ha02d727_0
   - multivolumefile=0.2.3=pyhd3eb1b0_0
+  - mysql=5.7.24=h721c034_2
   - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.3=py311h06a4308_0
+  - numpy=1.26.4=py311h08b1b3b_0
+  - numpy-base=1.26.4=py311hf175353_0
+  - opencv=4.10.0=py311hab19f7d_0
+  - openh264=2.1.1=h4ff587b_0
   - openjpeg=2.5.2=he7f1fd0_0
-  - openssl=3.0.15=h5eee18b_0
+  - openssl=3.3.2=hb9d3cd8_0
+  - packaging=24.1=py311h06a4308_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pcre2=10.42=hebb0a14_1
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pillow=10.4.0=py311h5eee18b_0
   - pip=24.2=py311h06a4308_0
+  - pixman=0.40.0=h7f8727e_1
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
   - psutil=5.9.0=py311h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
   - py7zr=0.20.5=py311h06a4308_0
   - pybcj=1.0.1=py311h5eee18b_0
+  - pybind11-abi=4=hd3eb1b0_1
+  - pycocotools=2.0.8=py311h18e1886_0
   - pycryptodomex=3.15.0=py311h5eee18b_0
+  - pygments=2.18.0=pyhd8ed1ab_0
   - pyppmd=1.0.0=py311h6a678d5_0
   - python=3.11.9=h955ad1f_0
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python_abi=3.11=2_cp311
+  - pyzmq=25.1.2=py311h6a678d5_0
   - pyzstd=0.15.10=py311h2c38b39_0
+  - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h5eee18b_0
+  - scikit-image=0.24.0=py311ha02d727_0
+  - scipy=1.13.1=py311h08b1b3b_0
   - setuptools=72.1.0=py311h06a4308_0
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.2.1=h6a678d5_0
   - sqlite=3.45.3=h5eee18b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tbb=2021.8.0=hdb19cb5_0
   - texttable=1.6.4=pyhd3eb1b0_0
+  - tifffile=2023.4.12=py311h06a4308_0
   - tk=8.6.14=h39e8969_0
+  - tornado=6.4.1=py311h9ecbd09_1
   - tqdm=4.66.5=py311h92b7b1e_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h04d1e81_0
+  - unicodedata2=15.1.0=py311h5eee18b_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.44.0=py311h06a4308_0
+  - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.6=h5eee18b_1
+  - zeromq=4.3.5=h6a678d5_0
+  - zfp=1.0.0=h6a678d5_0
+  - zipp=3.20.2=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.5=hc292b87_2
   - pip:
       - bpy==4.2.0
       - certifi==2024.8.30
       - charset-normalizer==3.3.2
-      - cython==3.0.11
+      - contourpy==1.3.0
+      - cycler==0.12.1
       - dataclasses-json==0.6.7
       - deprecated==1.2.14
+      - fonttools==4.54.1
       - idna==3.10
       - joblib==1.4.2
+      - kiwisolver==1.4.7
       - marshmallow==3.22.0
       - mypy-extensions==1.0.0
-      - numpy==1.26.4
       - obj2gltf==0.1.2
-      - opencv-python==4.10.0.84
-      - packaging==24.1
       - pygltflib==1.16.2
+      - pyparsing==3.1.4
       - requests==2.32.3
       - trimesh==4.4.9
-      - typing-extensions==4.12.2
       - typing-inspect==0.9.0
       - urllib3==2.2.3
       - wrapt==1.16.0
       - zstandard==0.23.0
-prefix: /home/local-admin/.conda/envs/3xm
+prefix: /home/tobia/anaconda3/envs/3xm
