Added download script for datasets - rename 3xM_postprocess to postprocess.py - updated env file (gdown and kaggle added) - made verify optionally

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,7 @@
 name: 3xm
 channels:
+  - nvidia
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
@@ -7,7 +9,9 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - aom=3.6.0=h6a678d5_0
   - asttokens=2.4.1=pyhd8ed1ab_0
+  - beautifulsoup4=4.12.3=pyha770c72_0
   - blas=1.0=mkl
+  - bleach=6.1.0=pyhd8ed1ab_0
   - blosc=1.21.3=h6a678d5_0
   - brotli=1.0.9=h5eee18b_8
   - brotli-bin=1.0.9=h5eee18b_8
@@ -17,9 +21,13 @@ dependencies:
   - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2024.9.24=h06a4308_0
   - cairo=1.16.0=hb05425b_5
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - cffi=1.17.1=py311hf29c0ef_0
   - cfitsio=3.470=h5893167_7
   - charls=2.2.0=h2531618_0
   - comm=0.2.2=pyhd8ed1ab_0
+  - contourpy=1.3.0=py311hd18a35c_2
+  - cycler=0.12.1=pyhd8ed1ab_0
   - cyrus-sasl=2.1.28=h52b45da_1
   - cython=3.0.11=py311h5eee18b_0
   - dav1d=1.2.1=h5eee18b_0
@@ -31,8 +39,11 @@ dependencies:
   - executing=2.1.0=pyhd8ed1ab_0
   - expat=2.6.3=h6a678d5_0
   - ffmpeg=4.2.2=h20bf706_0
+  - filelock=3.16.1=pyhd8ed1ab_0
   - fontconfig=2.14.1=h55d465d_3
+  - fonttools=4.54.1=py311h2dc5d0c_1
   - freetype=2.12.1=h4a9f257_0
+  - gdown=5.2.0=pyhd8ed1ab_0
   - giflib=5.2.1=h5eee18b_3
   - glib=2.78.4=h6a678d5_0
   - glib-tools=2.78.4=h6a678d5_0
@@ -41,9 +52,13 @@ dependencies:
   - graphite2=1.3.14=h295c915_1
   - gst-plugins-base=1.14.1=h6a678d5_1
   - gstreamer=1.14.1=h5eee18b_1
+  - h2=4.1.0=pyhd8ed1ab_0
   - harfbuzz=4.3.0=hf52aaf7_2
   - hdf5=1.12.1=h2b7332f_3
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
   - icu=73.1=h6a678d5_0
+  - idna=3.10=pyhd8ed1ab_0
   - imagecodecs=2023.1.23=py311h8105a5c_0
   - imageio=2.33.1=py311h06a4308_0
   - importlib-metadata=8.5.0=pyha770c72_0
@@ -56,6 +71,8 @@ dependencies:
   - jupyter_client=8.6.3=pyhd8ed1ab_0
   - jupyter_core=5.7.2=pyh31011fe_1
   - jxrlib=1.1=h7b6447c_2
+  - kaggle=1.6.17=pyhd8ed1ab_0
+  - kiwisolver=1.4.7=py311hd18a35c_0
   - krb5=1.20.1=h143b758_1
   - lame=3.100=h7b6447c_0
   - lazy_loader=0.4=py311h06a4308_0
@@ -112,6 +129,7 @@ dependencies:
   - mkl_fft=1.3.10=py311h5eee18b_0
   - mkl_random=1.2.7=py311ha02d727_0
   - multivolumefile=0.2.3=pyhd3eb1b0_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - mysql=5.7.24=h721c034_2
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
@@ -140,24 +158,30 @@ dependencies:
   - pybcj=1.0.1=py311h5eee18b_0
   - pybind11-abi=4=hd3eb1b0_1
   - pycocotools=2.0.8=py311h18e1886_0
+  - pycparser=2.22=pyhd8ed1ab_0
   - pycryptodomex=3.15.0=py311h5eee18b_0
   - pygments=2.18.0=pyhd8ed1ab_0
   - pyppmd=1.0.0=py311h6a678d5_0
+  - pysocks=1.7.1=pyha2e5f31_6
   - python=3.11.9=h955ad1f_0
   - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-slugify=8.0.4=pyhd8ed1ab_0
   - python_abi=3.11=2_cp311
   - pyzmq=25.1.2=py311h6a678d5_0
   - pyzstd=0.15.10=py311h2c38b39_0
   - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h5eee18b_0
+  - requests=2.32.3=pyhd8ed1ab_0
   - scikit-image=0.24.0=py311ha02d727_0
   - scipy=1.13.1=py311h08b1b3b_0
   - setuptools=72.1.0=py311h06a4308_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.2.1=h6a678d5_0
+  - soupsieve=2.5=pyhd8ed1ab_1
   - sqlite=3.45.3=h5eee18b_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - tbb=2021.8.0=hdb19cb5_0
+  - text-unidecode=1.3=pyhd8ed1ab_1
   - texttable=1.6.4=pyhd3eb1b0_0
   - tifffile=2023.4.12=py311h06a4308_0
   - tk=8.6.14=h39e8969_0
@@ -167,7 +191,9 @@ dependencies:
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h04d1e81_0
   - unicodedata2=15.1.0=py311h5eee18b_0
+  - urllib3=2.2.3=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_2
   - wheel=0.44.0=py311h06a4308_0
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.6=h5eee18b_1
@@ -178,25 +204,17 @@ dependencies:
   - zstd=1.5.5=hc292b87_2
   - pip:
       - bpy==4.2.0
-      - certifi==2024.8.30
       - charset-normalizer==3.3.2
-      - contourpy==1.3.0
-      - cycler==0.12.1
       - dataclasses-json==0.6.7
       - deprecated==1.2.14
-      - fonttools==4.54.1
-      - idna==3.10
       - joblib==1.4.2
-      - kiwisolver==1.4.7
       - marshmallow==3.22.0
       - mypy-extensions==1.0.0
       - obj2gltf==0.1.2
       - pygltflib==1.16.2
       - pyparsing==3.1.4
-      - requests==2.32.3
       - trimesh==4.4.9
       - typing-inspect==0.9.0
-      - urllib3==2.2.3
       - wrapt==1.16.0
       - zstandard==0.23.0
-prefix: /home/tobia/anaconda3/envs/3xm
+prefix: /home/local-admin/.conda/envs/3xm
