--- a/windows_env.yml
+++ b/windows_env.yml
@@ -3,32 +3,69 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - bleach=6.1.0=pyhd8ed1ab_0
+  - brotli-python=1.1.0=py311hda3d55a_2
+  - brotlicffi=1.1.0.0=py311hda3d55a_2
   - bzip2=1.0.8=h2466b09_7
   - ca-certificates=2024.8.30=h56e8100_0
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - cffi=1.17.1=py311he736701_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - h2=4.1.0=pyhd8ed1ab_0
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - idna=3.10=pyhd8ed1ab_0
+  - importlib-metadata=8.5.0=pyha770c72_0
+  - importlib_metadata=8.5.0=hd8ed1ab_0
+  - inflate64=1.0.0=py311he736701_2
+  - joblib=1.4.2=pyhd8ed1ab_0
+  - kaggle=1.6.17=pyhd8ed1ab_0
   - libexpat=2.6.3=he0c23c2_0
   - libffi=3.4.2=h8ffe710_5
   - libsqlite=3.46.1=h2466b09_0
   - libzlib=1.3.1=h2466b09_1
+  - multivolumefile=0.2.3=pyhd8ed1ab_0
   - openssl=3.3.2=h2466b09_0
+  - packaging=24.1=pyhd8ed1ab_0
   - pip=24.2=pyh8b19718_1
+  - psutil=6.1.0=py311he736701_0
+  - py7zr=0.22.0=pyhd8ed1ab_0
+  - pybcj=1.0.2=py311he736701_1
+  - pycparser=2.22=pyhd8ed1ab_0
+  - pycryptodomex=3.20.0=py311he736701_1
+  - pyppmd=1.1.0=py311hda3d55a_1
+  - pysocks=1.7.1=pyh0701188_6
   - python=3.11.9=h631f459_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-slugify=8.0.4=pyhd8ed1ab_0
+  - python_abi=3.11=5_cp311
+  - pyzstd=0.16.2=py311h53056dc_0
+  - requests=2.32.3=pyhd8ed1ab_0
   - setuptools=75.1.0=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - text-unidecode=1.3=pyhd8ed1ab_1
+  - texttable=1.7.0=pyhd8ed1ab_0
   - tk=8.6.13=h5226925_1
+  - tqdm=4.66.5=pyhd8ed1ab_0
   - tzdata=2024a=h8827d51_1
   - ucrt=10.0.22621.0=h57928b3_0
+  - urllib3=2.2.3=pyhd8ed1ab_0
   - vc=14.3=h8a93ad2_21
   - vc14_runtime=14.40.33810=ha82c5b3_21
   - vs2015_runtime=14.40.33810=h3bf8584_21
+  - webencodings=0.5.1=pyhd8ed1ab_2
   - wheel=0.44.0=pyhd8ed1ab_0
+  - win_inet_pton=1.1.0=pyh7428d3b_7
   - xz=5.2.6=h8d14728_0
+  - zipfile-deflate64=0.2.0=py311ha68e1ae_4
+  - zipp=3.20.2=pyhd8ed1ab_0
+  - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - bpy==4.2.0
-      - certifi==2024.8.30
       - charset-normalizer==3.3.2
       - cython==3.0.11
       - dataclasses-json==0.6.7
       - deprecated==1.2.14
-      - idna==3.10
       - imageio==2.35.1
       - lazy-loader==0.4
       - marshmallow==3.22.0
@@ -36,17 +73,14 @@ dependencies:
       - networkx==3.3
       - numpy==2.1.1
       - opencv-python==4.10.0.84
-      - packaging==24.1
       - pillow==10.4.0
       - pygltflib==1.16.2
-      - requests==2.32.3
       - scikit-image==0.24.0
       - scipy==1.14.1
       - tifffile==2024.9.20
       - trimesh==4.4.9
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
-      - urllib3==2.2.3
       - wrapt==1.16.0
       - zstandard==0.23.0
 prefix: D:\Programme\anaconda\envs\3xM
